# Misc

Linux-Bash/Linux Inlab solution/: 170050058-lab1-takehome-problem1.solution  170050058-lab1-takehome-problem2.solution  170050058-lab1-takehome-problem3.solution  170050058-lab1-takehome-problem4.solution  170050058-lab1-takehome-problem6.solution
Linux-Bash/Outlab/Task1/A/: isLeapYear.sh
Linux-Bash/Outlab/Task2/B/: dupe.sh
Linux-Bash/Outlab/Task2/D/: dupedir.sh  superdupe.sh
Linux-Bash/Outlab/Task3/: symLinks.sh
Linux-Bash/Outlab/Task4/A/: fact.sh
Linux-Bash/Outlab/Task4/B/: ans.txt
Linux-Bash/Outlab/Task4/C/: fact_gen.sh
Linux-Bash/Outlab/Task5/: verifiable_copy.sh
Linux-Bash/Outlab/Task6/A/: lure.awk
Linux-Bash/Outlab/Task6/C/: loki.csv  trap.sh
Make-CMake/P1/: CMakeLists.txt  rawmake
Make-CMake/P1/mygame/: CMakeLists.txt
Make-CMake/P3/: Makefile  depend.cpp  depend.h  execution  execution_times  main.cpp
